--- a/abrigo.html
+++ b/abrigo.html
@@ -37,78 +37,80 @@
   </header>
 
   <main>
-    <h1 class="animate__animated animate__bounce animate__flipInX animate__delay-2s">ABRIGO</h1>
-    <div class="container">
-      <div class="item">
-        <div class="item-text">
-          <img src="imagen/Abrigo/buzo.webp" class="img-general" alt="Abrigo Buzo">
-          <h3>Buzo</h3>
-          <h4>Buzo de hombre Grayson</h4>
-          <p>$1.xxx,xx</p>
-          <p><strong>Hasta</strong> 6 cuotas sin interés de $2XX,XX</p>
-          <span class="btn">
-            <a href="#">Comprar</a>
-          </span>
+    <section>
+      <h1 class="animate__animated animate__bounce animate__flipInX animate__delay-2s">ABRIGO</h1>
+      <div class="container">
+        <div class="item">
+          <div class="item-text">
+            <img src="imagen/Abrigo/buzo.webp" class="img-general" alt="Abrigo Buzo">
+            <h3>Buzo</h3>
+            <h4>Buzo de hombre Grayson</h4>
+            <p>$1.xxx,xx</p>
+            <p><strong>Hasta</strong> 6 cuotas sin interés de $2XX,XX</p>
+            <span class="btn">
+              <a href="#">Comprar</a>
+            </span>
+          </div>
+        </div>
+        <div class="item">
+          <div class="item-text">
+            <img src="imagen/Abrigo/campera.webp" class="img-general" alt="Abrigo Campera">
+            <h3>Campera Sport</h3>
+            <h4>Campera de micro polar</h4>
+            <p>$1.xxx,xx</p>
+            <p><strong>Hasta</strong> 6 cuotas sin interés de $2XX,XX</p>
+            <span class="btn">
+              <a href="#">Comprar</a>
+            </span>
+          </div>
+        </div>
+        <div class="item">
+          <div class="item-text">
+            <img src="imagen/Abrigo/camperon.jpg" class="img-general" alt="Abrigo Camperon">
+            <h3>Remara Y Short</h3>
+            <h4>Campera Nix con Polar</h4>
+            <p>$1.xxx,xx</p>
+            <p><strong>Hasta</strong> 6 cuotas sin interés de $2XX,XX</p>
+            <span class="btn">
+              <a href="#">Comprar</a>
+            </span>
+          </div>
+        </div>
+        <div class="item">
+          <div class="item-text">
+            <img src="imagen/Abrigo/parkacap.webp" class="img-general" alt="Abrigo Parka">
+            <h3>Abrigo Parka</h3>
+            <h4>Con capucha, 100% Poliéster</h4>
+            <p>$1.xxx,xx</p>
+            <p><strong>Hasta</strong> 6 cuotas sin interés de $2XX,XX</p>
+            <span class="btn">
+              <a href="#">Comprar</a>
+            </span>
+          </div>
+        </div>
+        
+        <div class="pag">
+          <nav aria-label="Page navigation example">
+            <ul class="pagination">
+              <li class="page-item">
+                <a class="page-link" href="#" aria-label="Previous">
+                  <span aria-hidden="true">&laquo;</span>
+                </a>
+              </li>
+              <li class="page-item"><a class="page-link" href="#">1</a></li>
+              <li class="page-item"><a class="page-link" href="#">2</a></li>
+              <li class="page-item"><a class="page-link" href="#">3</a></li>
+              <li class="page-item">
+                <a class="page-link" href="#" aria-label="Next">
+                  <span aria-hidden="true">&raquo;</span>
+                </a>
+              </li>
+            </ul>
+          </nav>
         </div>
       </div>
-      <div class="item">
-        <div class="item-text">
-          <img src="imagen/Abrigo/campera.webp" class="img-general" alt="Abrigo Campera">
-          <h3>Campera Sport</h3>
-          <h4>Campera de micro polar</h4>
-          <p>$1.xxx,xx</p>
-          <p><strong>Hasta</strong> 6 cuotas sin interés de $2XX,XX</p>
-          <span class="btn">
-            <a href="#">Comprar</a>
-          </span>
-        </div>
-      </div>
-      <div class="item">
-        <div class="item-text">
-          <img src="imagen/Abrigo/camperon.jpg" class="img-general" alt="Abrigo Camperon">
-          <h3>Remara Y Short</h3>
-          <h4>Campera Nix con Polar</h4>
-          <p>$1.xxx,xx</p>
-          <p><strong>Hasta</strong> 6 cuotas sin interés de $2XX,XX</p>
-          <span class="btn">
-            <a href="#">Comprar</a>
-          </span>
-        </div>
-      </div>
-      <div class="item">
-        <div class="item-text">
-          <img src="imagen/Abrigo/parkacap.webp" class="img-general" alt="Abrigo Parka">
-          <h3>Abrigo Parka</h3>
-          <h4>Con capucha, 100% Poliéster</h4>
-          <p>$1.xxx,xx</p>
-          <p><strong>Hasta</strong> 6 cuotas sin interés de $2XX,XX</p>
-          <span class="btn">
-            <a href="#">Comprar</a>
-          </span>
-        </div>
-      </div>
-    </div>
-  </Main>
-
-  <section class="pag">
-    <nav aria-label="Page navigation example">
-      <ul class="pagination">
-        <li class="page-item">
-          <a class="page-link" href="#" aria-label="Previous">
-            <span aria-hidden="true">&laquo;</span>
-          </a>
-        </li>
-        <li class="page-item"><a class="page-link" href="#">1</a></li>
-        <li class="page-item"><a class="page-link" href="#">2</a></li>
-        <li class="page-item"><a class="page-link" href="#">3</a></li>
-        <li class="page-item">
-          <a class="page-link" href="#" aria-label="Next">
-            <span aria-hidden="true">&raquo;</span>
-          </a>
-        </li>
-      </ul>
-    </nav>
-  </section>
+    </section>
+  </main>
 
   <footer class="pie-pagina">
     <div class="grupo">
@@ -140,6 +142,13 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
     </script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script>
+    $(document).ready(function () {
+      $("a[title|='Hosted on free web hosting 000webhost.com. Host your own website for       FREE.']").css("display", "none");
+      $("img[alt|='www.000webhost.com']").css("display", "none");
+    });
+  </script>
 </body>
 
 </html>
