--- a/contacto.html
+++ b/contacto.html
@@ -1,83 +1,96 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Contactanos. ¿Necesitás hablar con nosotros? ¡Estamos para ayudarte!">
-    <meta name="keywords" content="Email, Redes Sociales, Consulta, Preguntas, contacto">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
 
-    <title>Contacto</title>
-    <link rel="icon" href="imagen/lenna1.ico" />
-    <link rel="stylesheet" href="css/estilos.css"/>
-  </head>
-  <body>
-    <header class="barra">
-      <nav>
-          <input type="checkbox" id="check">
-          <label for="check" class="checkbtn">
-              <img src="imagen/interface-button_icon.png" alt="Logo Menu">
-          </label>
-          <a href="index.html" class="enlace"><img src="imagen/lenna2.png" title="Inicio" alt="Logo Lenna" class="logo"></a>
-          <ul>
-              <li><a href="abrigo.html">Abrigos</a></li>
-              <li><a href="ropa-deportiva.html">Ropa Deportiva</a></li>
-              <li><a href="conjuntos.html">Conjuntos</a></li>
-              <li><a href="contacto.html">Contacto</a></li>
-          </ul>
-      </nav>
-      </header>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Contactanos. ¿Necesitás hablar con nosotros? ¡Estamos para ayudarte!">
+  <meta name="keywords" content="Email, Redes Sociales, Consulta, Preguntas, contacto">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
 
-    <div class="contacto">
-      <div class="cont-1">
-        <div class="contl">
-        </div>
-        <div class="contr">
-          <h2>Contacto</h2>
+  <title>Contacto</title>
+  <link rel="icon" href="imagen/lenna1.ico" />
+  <link rel="stylesheet" href="css/estilos.css" />
+</head>
+
+<body>
+  <header class="barra">
+    <nav>
+      <input type="checkbox" id="check">
+      <label for="check" class="checkbtn">
+        <img src="imagen/interface-button_icon.png" alt="Logo Menu">
+      </label>
+      <a href="index.html" class="enlace"><img src="imagen/lenna2.png" title="Inicio" alt="Logo Lenna" class="logo"></a>
+      <ul>
+        <li><a href="abrigo.html">Abrigos</a></li>
+        <li><a href="ropa-deportiva.html">Ropa Deportiva</a></li>
+        <li><a href="conjuntos.html">Conjuntos</a></li>
+        <li><a href="contacto.html">Contacto</a></li>
+      </ul>
+    </nav>
+  </header>
+  
+  <main>
+    <section>
+      <div class="contacto">
+        <div class="cont-1">
+          <div class="contl">
+          </div>
+          <div class="contr">
+            <h2>Contacto</h2>
             <input type="text" class="from" placeholder="Nombre">
             <input type="email" class="from" placeholder="Email">
             <input type="text" class="from" placeholder="Telefono">
             <textarea class="from area" placeholder="Mensaje"></textarea>
             <button class="but">Enviar</button>
+          </div>
+        </div>
+      </div>
+    </section>
+  </main>
+
+  <footer class="pie-pagina">
+    <div class="grupo">
+      <div class="box1">
+        <figure>
+          <a href="#"><img src="imagen/lenna1.jpg" alt="Logo LENNA"></a>
+        </figure>
+      </div>
+      <div class="box2">
+        <h2>SOBRE NOSOTROS</h2>
+        <P>Nuestro compromiso es ofrecer una gran variedad de prendas con una excelente relación
+          diseño-precio-calidad.</P>
+        <p>También podes seguirnos en redes sociales para que podamos estar conectados y nos sigamos conociendo.
+        </p>
+      </div>
+      <div class="box2">
+        <h2>SEGUINOS</h2>
+        <div class="red-sociales">
+          <a href="https://whatsapp.com" target="blank"><img src="imagen/whatsapp21.png" alt="logo whatsapp"></a>
+          <a href="https://instagram.com" target="blank"><img src="imagen/Instagram2.png" alt="logo instagram"></a>
+          <a href="https://facebook.com" target="blank"><img src="imagen/Facebook2.png" alt="logo facebook"></a>
         </div>
       </div>
     </div>
-
-    <footer class="pie-pagina">
-      <div class="grupo">
-          <div class="box1">
-              <figure>
-                  <a href="#"><img src="imagen/lenna1.jpg" alt="Logo LENNA"></a>
-              </figure>
-          </div>
-          <div class="box2">
-              <h2>SOBRE NOSOTROS</h2>
-              <P>Nuestro compromiso es ofrecer una gran variedad de prendas con una excelente relación
-                  diseño-precio-calidad.</P>
-              <p>También podes seguirnos en redes sociales para que podamos estar conectados y nos sigamos conociendo.
-              </p>
-          </div>
-          <div class="box2">
-              <h2>SEGUINOS</h2>
-              <div class="red-sociales">
-                <a href="https://whatsapp.com" target="blank"><img src="imagen/whatsapp21.png" alt="logo whatsapp"></a>
-                <a href="https://instagram.com" target="blank"><img src="imagen/Instagram2.png" alt="logo instagram"></a>
-                <a href="https://facebook.com" target="blank"><img src="imagen/Facebook2.png" alt="logo facebook"></a>
-              </div>
-          </div>
-      </div>
-      <div class="copy">
-          <p>&copy; 2021 <b>LENNA</b> - todos los derechos reservados</p>
-      </div>
+    <div class="copy">
+      <p>&copy; 2021 <b>LENNA</b> - todos los derechos reservados</p>
+    </div>
   </footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-        crossorigin="anonymous">
+    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
+    </script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script>
+    $(document).ready(function () {
+      $("a[title|='Hosted on free web hosting 000webhost.com. Host your own website for       FREE.']").css("display", "none");
+      $("img[alt|='www.000webhost.com']").css("display", "none");
+    });
   </script>
-  </body>
+</body>
+
 </html>
