--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
             </div>
             <div class="contain__info">
                 <div class="info--link">
-                    <img src="imagen/ropa deportiva/remeradiseño.webp" class="img-general" alt="Remera"/>
+                    <img src="imagen/ropa deportiva/remeradiseno.jpg" class="img-general" alt="Remera"/>
                     <h3>Ofertas</h3>
                     <p>Mira todas nuestras ofertas y descuentos.</p>
                     <span class="span">
@@ -189,6 +189,13 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+        <script>
+          $(document).ready(function(){
+          $("a[title|='Hosted on free web hosting 000webhost.com. Host your own website for       FREE.']").css("display", "none");
+          $("img[alt|='www.000webhost.com']").css("display", "none");
+          });
+        </script>
 </body>
 
 </html>
