--- a/ropa-deportiva.html
+++ b/ropa-deportiva.html
@@ -38,78 +38,82 @@
     </header>
 
     <main>
-        <h1 class="animate__animated animate__bounce animate__flipInX animate__delay-2s animate_center">ROPA DEPORTIVA</h1>
-        <div class="container">
-            <div class="item">
-                <div class="item-text">
-                    <img src="imagen/ropa deportiva/PantalonJogging.webp" class="img-general" alt="Pantalon Jogging">
-                    <h3>Pantalon Jogging</h3>
-                    <h4> Negro Deportivo Hombre</h4>
-                    <p>$1.xxx,xx</p>
-                    <p><strong>Hasta</strong> 6 cuotas sin interés de $2XX,XX</p>
-                    <span class="btn">
-                        <a href="#">Comprar</a>
-                    </span>
+        <section>
+            <h1 class="animate__animated animate__bounce animate__flipInX animate__delay-2s animate_center">ROPA
+                DEPORTIVA</h1>
+            <div class="container">
+                <div class="item">
+                    <div class="item-text">
+                        <img src="imagen/ropa deportiva/PantalonJogging.webp" class="img-general"
+                            alt="Pantalon Jogging">
+                        <h3>Pantalon Jogging</h3>
+                        <h4> Negro Deportivo Hombre</h4>
+                        <p>$1.xxx,xx</p>
+                        <p><strong>Hasta</strong> 6 cuotas sin interés de $2XX,XX</p>
+                        <span class="btn">
+                            <a href="#">Comprar</a>
+                        </span>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="item-text">
+                        <img src="imagen/ropa deportiva/remeraalcuerpo.webp" class="img-general" alt="Remera Deportiva">
+                        <h3>Remara Entallada</h3>
+                        <h4>Remera Fit Running</h4>
+                        <p>$1.xxx,xx</p>
+                        <p><strong>Hasta</strong> 6 cuotas sin interés de $2XX,XX</p>
+                        <span class="btn">
+                            <a href="#">Comprar</a>
+                        </span>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="item-text">
+                        <img src="imagen/ropa deportiva/remeradiseno.jpg" class="img-general" alt="Remera Deportiva">
+                        <h3>Remera Camiseta</h3>
+                        <h4>Para toda disciplina Deportiva</h4>
+                        <p>$1.xxx,xx</p>
+                        <p><strong>Hasta</strong> 6 cuotas sin interés de $2XX,XX</p>
+                        <span class="btn">
+                            <a href="#">Comprar</a>
+                        </span>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="item-text">
+                        <img src="imagen/ropa deportiva/shortsrunning.webp" class="img-general" alt="Short">
+                        <h3>Short Hombre Running</h3>
+                        <h4>Excelente calce y confección</h4>
+                        <p>$1.xxx,xx</p>
+                        <p><strong>Hasta</strong> 6 cuotas sin interés de $2XX,XX</p>
+                        <span class="btn">
+                            <a href="#">Comprar</a>
+                        </span>
+                    </div>
+                </div>
+                <div class="pag">
+                    <nav aria-label="Page navigation example">
+                        <ul class="pagination">
+                            <li class="page-item">
+                                <a class="page-link" href="#" aria-label="Previous">
+                                    <span aria-hidden="true">&laquo;</span>
+                                </a>
+                            </li>
+                            <li class="page-item"><a class="page-link" href="#">1</a></li>
+                            <li class="page-item"><a class="page-link" href="#">2</a></li>
+                            <li class="page-item"><a class="page-link" href="#">3</a></li>
+                            <li class="page-item">
+                                <a class="page-link" href="#" aria-label="Next">
+                                    <span aria-hidden="true">&raquo;</span>
+                                </a>
+                            </li>
+                        </ul>
+                    </nav>
                 </div>
             </div>
-            <div class="item">
-                <div class="item-text">
-                    <img src="imagen/ropa deportiva/remeraalcuerpo.webp" class="img-general" alt="Remera Deportiva">
-                    <h3>Remara Entallada</h3>
-                    <h4>Remera Fit Running</h4>
-                    <p>$1.xxx,xx</p>
-                    <p><strong>Hasta</strong> 6 cuotas sin interés de $2XX,XX</p>
-                    <span class="btn">
-                        <a href="#">Comprar</a>
-                    </span>
-                </div>
-            </div>
-            <div class="item">
-                <div class="item-text">
-                    <img src="imagen/ropa deportiva/remeradiseño.webp" class="img-general" alt="Remera Deportiva">
-                    <h3>Remera Camiseta</h3>
-                    <h4>Para toda disciplina Deportiva</h4>
-                    <p>$1.xxx,xx</p>
-                    <p><strong>Hasta</strong> 6 cuotas sin interés de $2XX,XX</p>
-                    <span class="btn">
-                        <a href="#">Comprar</a>
-                    </span>
-                </div>
-            </div>
-            <div class="item">
-                <div class="item-text">
-                    <img src="imagen/ropa deportiva/shortsrunning.webp" class="img-general" alt="Short">
-                    <h3>Short Hombre Running</h3>
-                    <h4>Excelente calce y confección</h4>
-                    <p>$1.xxx,xx</p>
-                    <p><strong>Hasta</strong> 6 cuotas sin interés de $2XX,XX</p>
-                    <span class="btn">
-                        <a href="#">Comprar</a>
-                    </span>
-                </div>
-            </div>
-        </div>
-    </Main>
+        </section>
+    </main>
 
-    <section class="pag">
-        <nav aria-label="Page navigation example">
-            <ul class="pagination">
-                <li class="page-item">
-                    <a class="page-link" href="#" aria-label="Previous">
-                        <span aria-hidden="true">&laquo;</span>
-                    </a>
-                </li>
-                <li class="page-item"><a class="page-link" href="#">1</a></li>
-                <li class="page-item"><a class="page-link" href="#">2</a></li>
-                <li class="page-item"><a class="page-link" href="#">3</a></li>
-                <li class="page-item">
-                    <a class="page-link" href="#" aria-label="Next">
-                        <span aria-hidden="true">&raquo;</span>
-                    </a>
-                </li>
-            </ul>
-        </nav>
-    </section>
 
     <footer class="pie-pagina">
         <div class="grupo">
@@ -128,9 +132,12 @@
             <div class="box2">
                 <h2>SEGUINOS</h2>
                 <div class="red-sociales">
-                    <a href="https://whatsapp.com" target="blank"><img src="imagen/whatsapp21.png" alt="logo whatsapp"></a>
-                    <a href="https://instagram.com" target="blank"><img src="imagen/Instagram2.png" alt="logo instagram"></a>
-                    <a href="https://facebook.com" target="blank"><img src="imagen/Facebook2.png" alt="logo facebook"></a>
+                    <a href="https://whatsapp.com" target="blank"><img src="imagen/whatsapp21.png"
+                            alt="logo whatsapp"></a>
+                    <a href="https://instagram.com" target="blank"><img src="imagen/Instagram2.png"
+                            alt="logo instagram"></a>
+                    <a href="https://facebook.com" target="blank"><img src="imagen/Facebook2.png"
+                            alt="logo facebook"></a>
                 </div>
             </div>
         </div>
@@ -141,6 +148,13 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script>
+        $(document).ready(function () {
+            $("a[title|='Hosted on free web hosting 000webhost.com. Host your own website for       FREE.']").css("display", "none");
+            $("img[alt|='www.000webhost.com']").css("display", "none");
+        });
+    </script>
 </body>
 </body>
 
